minecraft/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft
  namespace: minecraft
  labels:
    app: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      containers:
      - name: minecraft
        image: itzg/minecraft-server
        ports:
        - containerPort: 25565
        volumeMounts:
          - name: mc-storage
            mountPath: /data
      volumes:
      - name: mc-storage
        persistentVolumeClaim:
          claimName: minecraft-pvc
