minecraft/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minecraft
  namespace: minecraft
spec:
  type: ClusterIP
  selector:
    app: minecraft
  ports:
    - name: minecraft
      protocol: TCP
      port: 25565
      targetPort: 25565
