minecraft/minecraft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft
  labels:
    app: minecraft-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
      - name: minecraft-server
        image: itzg/minecraft-server
        ports:
        - containerPort: 25565
        volumeMounts:
          - name: mc-storage
            mountPath: /data
      volumes:
      - name: mc-storage
        persistentVolumeClaim:
          claimName: minecraft-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: minecraft-svc
  namespace: minecraft
spec:
  type: ClusterIP
  selector:
    app: minecraft-server
  ports:
    - name: minecraft
      protocol: TCP
      port: 25565
      targetPort: 25565

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: deguzman.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-svc
                port:
                  number: 25565
